[package]
name = "syl2381"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "syl2381"
path = "src/lib.rs"

[dependencies]
rmodbus = "0.7.4"
serialport = "4.2.1"

[dev-dependencies]
paste = "1.0.14"
embedded-hal = { version = "=1.0.0-alpha.9", optional = false }
embedded-hal-nb = { version = "=1.0.0-alpha.1", optional = false }
nb = { version = "1", optional = false }
