[package]
name = "syl2381"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "syl2381"
path = "src/lib.rs"

[dependencies]
embedded-hal = { version = "0.2.5", features = ["unproven"] }
eh1_0_alpha = { package = "embedded-hal", version = "=1.0.0-alpha.11", optional = false }
eh_nb_1_0_alpha = { package = "embedded-hal-nb", version = "=1.0.0-alpha.3", optional = false }
rmodbus = "0.7.4"
serialport = "4.2.1"
nb = "1"

[dev-dependencies]
embedded-hal = { version = "0.2.5", features = ["unproven"] }
eh1_0_alpha = { package = "embedded-hal", version = "=1.0.0-alpha.11", optional = false }
eh_nb_1_0_alpha = { package = "embedded-hal-nb", version = "=1.0.0-alpha.3", optional = false }
nb = { version = "1", optional = false }
paste = "1.0.14"
